Complete Text Password

--- a/app/src/main/res/layout/dialog_new_text_password.xml
+++ b/app/src/main/res/layout/dialog_new_text_password.xml
@@ -35,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txtWarning8CharBad"
+        android:padding="10dp"
         android:text="at least 8 characters"
         android:textColor="@android:color/holo_red_light"
         />
@@ -42,6 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txtWarning8CharGood"
+        android:padding="10dp"
         android:text="Look good"
         android:textColor="@android:color/holo_green_light"
         android:visibility="gone"
