Complete Text Password + tweak edittext

--- a/app/src/main/res/layout/dialog_change_text_password.xml
+++ b/app/src/main/res/layout/dialog_change_text_password.xml
@@ -2,95 +2,97 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="ID"
-        android:padding="10dp"
-        android:textSize="20sp"
-        />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtIDChangeTextPass"
+        android:textSize="20sp" />
 
-        />
+    <EditText
+        android:id="@+id/txtIDChangeTextPass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:imeOptions="actionNext" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="Old Password"
-        android:padding="10dp"
-        android:textSize="20sp"
-        />
+        android:textSize="20sp" />
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/txtOldPassChangeTextPass"
-        android:inputType="textPassword"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:imeOptions="actionNext"
+        android:inputType="textPassword" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Password"
         android:padding="10dp"
-        android:textSize="20sp"
-        />
+        android:text="New Password"
+        android:textSize="20sp" />
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/txtPassChangeTextPass"
-        android:inputType="textPassword"
-        />
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:imeOptions="actionNext"
+        android:inputType="textPassword" />
+
+    <TextView
         android:id="@+id/txtWarning8CharBad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="at least 8 characters"
-        android:textColor="@android:color/holo_red_light"
-        />
+        android:textColor="@android:color/holo_red_light" />
+
     <TextView
+        android:id="@+id/txtWarning8CharGood"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/txtWarning8CharGood"
         android:padding="10dp"
         android:text="Look good"
         android:textColor="@android:color/holo_green_light"
-        android:visibility="gone"
-        />
+        android:visibility="gone" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Re-Enter Password"
         android:padding="10dp"
-        android:textSize="20sp"
-        />
+        android:text="Re-Enter Password"
+        android:textSize="20sp" />
+
     <EditText
+        android:id="@+id/txtRePassChangeTextPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/txtRePassChangeTextPass"
+        android:imeOptions="actionNext"
         android:inputType="textPassword" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center"
-        >
+        android:orientation="horizontal">
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/btnConfirmChangeTextPass"
-            android:text="@string/confirm"
-            />
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/confirm" />
+
+        <Button
             android:id="@+id/btnCancelChangeTextPass"
-            android:text="@string/cancel"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel" />
     </LinearLayout>
 </LinearLayout>
