--- a/app/src/main/res/layout/dialog_test_text_password.xml
+++ b/app/src/main/res/layout/dialog_test_text_password.xml
@@ -2,51 +2,53 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="ID"
-        android:padding="10dp"
-        android:textSize="20sp"
-        />
+        android:textSize="20sp" />
+
     <EditText
+        android:id="@+id/txtIDTestTextPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/txtIDTestTextPass"
+        android:imeOptions="actionNext"
+        android:singleLine="true" />
 
-        />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/password"
         android:padding="10dp"
-        android:textSize="20sp"
-        />
+        android:text="@string/password"
+        android:textSize="20sp" />
+
     <EditText
+        android:id="@+id/txtPassTestTextPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/txtPassTestTextPass"
-        android:inputType="textPassword" />
+        android:imeOptions="actionNext"
+        android:inputType="textPassword"
+        android:singleLine="true" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center"
-        >
+        android:orientation="horizontal">
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/btnConfirmTestTextPass"
-            android:text="@string/confirm"
-            />
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/confirm" />
+
+        <Button
             android:id="@+id/btnCancelTestTextPass"
-            android:text="@string/cancel"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel" />
     </LinearLayout>
 </LinearLayout>
