--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,9 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#f44336</color>
+    <color name="patternNormal">#ffffff</color>
+    <color name="patternCorrect">#76ff03</color>
+    <color name="patternWrong">#ff3d00</color>
+    <color name="customBackgroundColor">#37474F</color>
 </resources>
