--- a/app/src/main/res/layout/activity_pattern.xml
+++ b/app/src/main/res/layout/activity_pattern.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
         android:textColor="@color/white"
+        android:gravity="center"
         android:textCursorDrawable="@drawable/color_cursor"
         android:textSize="22sp"
         android:singleLine="true"
@@ -43,7 +44,7 @@
         android:layout_height="wrap_content"
         android:text="User not found"
         android:gravity="center"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/patternWrong"
         android:visibility="invisible"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
