--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
+    android:background="@color/customBackgroundColor"
     tools:context=".activity.MainActivity">
 
     <android.support.constraint.Guideline
@@ -19,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_password"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/btnTestTextPass"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -27,9 +29,12 @@
 
     <Button
         android:id="@+id/btnTestTextPass"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/test"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnTestPattern"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
@@ -38,9 +43,12 @@
 
     <Button
         android:id="@+id/btnChangeTextPass"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/change"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintLeft_toRightOf="@id/btnTestTextPass"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/btnTestTextPass" />
@@ -50,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pattern"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/btnTestPattern"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -58,9 +67,12 @@
 
     <Button
         android:id="@+id/btnTestPattern"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/test"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnTestBehavior"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
@@ -69,9 +81,12 @@
 
     <Button
         android:id="@+id/btnChangePattern"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/change"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintLeft_toRightOf="@id/btnTestPattern"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/btnTestPattern" />
@@ -81,6 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/behavior"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/btnTestBehavior"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -89,10 +105,13 @@
 
     <Button
         android:id="@+id/btnTestBehavior"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/test"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnTestFingerprint"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
         app:layout_constraintRight_toLeftOf="@id/btnChangeBehavior"
@@ -100,12 +119,53 @@
 
     <Button
         android:id="@+id/btnChangeBehavior"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/change"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintLeft_toRightOf="@id/btnTestBehavior"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/btnTestBehavior" />
+
+    <TextView
+        android:id="@+id/txtFingerprint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fingerprint"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@id/btnTestFingerprint"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@id/btnTestFingerprint" />
+
+    <Button
+        android:id="@+id/btnTestFingerprint"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/test"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toRightOf="@id/guideline_vertical"
+        app:layout_constraintRight_toLeftOf="@id/btnChangeFingerprint"
+        app:layout_constraintTop_toBottomOf="@+id/btnTestBehavior" />
+
+    <Button
+        android:id="@+id/btnChangeFingerprint"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/change"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toRightOf="@id/btnTestFingerprint"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/btnTestFingerprint" />
 
 
 </android.support.constraint.ConstraintLayout>
