--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#f44336</color>
+    <color name="colorAccent">#008577</color>
     <color name="patternNormal">#ffffff</color>
     <color name="patternCorrect">#76ff03</color>
     <color name="patternWrong">#ff3d00</color>
